# opengl_tutorial

./: .gitignore  CMakeLists.txt  README.md  postbuild.py  subdirlist.cmake
res/shaders/: Basic.shader
src/common/: debugbreak.h  indexbuffer.cpp  indexbuffer.h  pr_glfw.cpp  pr_glfw.h  renderer.cpp  renderer.h  vertexbuffer.cpp  vertexbuffer.h
src/executables/Tut10-Errors-classic/: main.cpp
src/executables/Tut11-Uniforms/: main.cpp
src/executables/Tut12-VertexArrays/: main.cpp
src/executables/Tut13-Classes/: main.cpp
src/executables/Tut13-ClassesExtra/: main.cpp
src/executables/Tut7/: main.cpp
src/executables/Tut9-IndexBuffers/: main.cpp
